--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1120,15 +1120,15 @@ input, select, textarea {
 		z-index: 1;
 	}
 
-		#bg:before, #bg:after {
-			content: '';
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-		}
+#		#bg:before, #bg:after {
+#			content: '';
+#			display: block;
+#			position: absolute;
+#			top: 0;
+#			left: 0;
+#			width: 100%;
+3			height: 100%;
+#		}
 
 		#bg:before {
 			-moz-transition: background-color 2.5s ease-in-out;
@@ -1165,16 +1165,16 @@ input, select, textarea {
 			z-index: 1;
 		}
 
-		body.is-article-visible #bg:after {
-			-moz-transform: scale(1.0825);
-			-webkit-transform: scale(1.0825);
-			-ms-transform: scale(1.0825);
-			transform: scale(1.0825);
-			-moz-filter: blur(0.2rem);
-			-webkit-filter: blur(0.2rem);
-			-ms-filter: blur(0.2rem);
-			filter: blur(0.2rem);
-		}
+#		body.is-article-visible #bg:after {
+#			-moz-transform: scale(1.0825);
+#			-webkit-transform: scale(1.0825);
+#			-ms-transform: scale(1.0825);
+#			transform: scale(1.0825);
+#			-moz-filter: blur(0.2rem);
+#			-webkit-filter: blur(0.2rem);
+#			-ms-filter: blur(0.2rem);
+#			filter: blur(0.2rem);
+#		}
 
 		body.is-preload #bg:before {
 			background-color: #000000;
