--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1120,15 +1120,7 @@ input, select, textarea {
 		z-index: 1;
 	}
 
-#		#bg:before, #bg:after {
-#			content: '';
-#			display: block;
-#			position: absolute;
-#			top: 0;
-#			left: 0;
-#			width: 100%;
-3			height: 100%;
-#		}
+		#bg:before, 
 
 		#bg:before {
 			-moz-transition: background-color 2.5s ease-in-out;
@@ -1149,32 +1141,9 @@ input, select, textarea {
 			z-index: 2;
 		}
 
-		#bg:after {
-			-moz-transform: scale(1.125);
-			-webkit-transform: scale(1.125);
-			-ms-transform: scale(1.125);
-			transform: scale(1.125);
-			-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
-			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
-			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
-			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("https://donparlor.github.io/cosmolyo/images/bg.jpg");
-			background-position: center;
-			background-size: cover;
-			background-repeat: no-repeat;
-			z-index: 1;
-		}
+		
 
-#		body.is-article-visible #bg:after {
-#			-moz-transform: scale(1.0825);
-#			-webkit-transform: scale(1.0825);
-#			-ms-transform: scale(1.0825);
-#			transform: scale(1.0825);
-#			-moz-filter: blur(0.2rem);
-#			-webkit-filter: blur(0.2rem);
-#			-ms-filter: blur(0.2rem);
-#			filter: blur(0.2rem);
-#		}
+		body.is-article-visible 
 
 		body.is-preload #bg:before {
 			background-color: #000000;
@@ -1659,3 +1628,21 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+
+
+#bg:after {
+  -moz-transform: scale(1.125);
+  -webkit-transform: scale(1.125);
+  -ms-transform: scale(1.125);
+  transform: scale(1.125);
+  -moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
+  -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
+  -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
+  transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
+  background-image: url("https://donparlor.github.io/cosmolyo/images/bg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
