--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1629,8 +1629,6 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-
-
 #bg:after {
   -moz-transform: scale(1.125);
   -webkit-transform: scale(1.125);
@@ -1645,4 +1643,11 @@ input, select, textarea {
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 1;
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
