--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1132,7 +1132,8 @@ input, select, textarea {
   height: 100%;
   transition: background-color 2.5s ease-in-out;
   transition-delay: 0.75s;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85));
+  /* On diminue l’opacité à 0.4 */
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
