--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1654,3 +1654,23 @@ input, select, textarea {
 h1, h2, h3, h4, h5, h6, p {
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.7);
 }
+.map-container {
+  position: relative;
+  width: 100%;
+  /* 
+     Choisis un ratio. 56.25% = 16:9
+     Si tu préfères plus vertical, tu peux augmenter le pourcentage, ex: 75%
+  */
+  padding-bottom: 56.25%; 
+  height: 0;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  border: 0;
+}
