--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1666,14 +1666,20 @@ h1, h2, h3, h4, h5, h6, p {
   overflow: hidden;
 }
 
+.map-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* ratio 16:9 */
+  height: 0;
+  overflow: hidden;
+}
 .map-container iframe {
   position: absolute;
-  top: 0; 
-  left: 0;
-  width: 100%; 
-  height: 100%;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
   border: 0;
 }
+
 /* Ajustements spécifiques pour l’article #carte */
 article#carte {
   width: 90vw !important;         /* Occuper 90% de la largeur de l’écran */
